2017-06-12  Lucas Forschler  <lforschler@apple.com>

        <rdar://problem/32683422>
        Teach copy-webkitlibraries-to-product-directory script about updated libraries.

        Reviewed by Conrad Schultz.

        * Scripts/copy-webkitlibraries-to-product-directory:

2017-06-12  Tim Horton  <timothy_horton@apple.com>

        [iOS] Cmd-C doesn't copy text from WKWebView
        https://bugs.webkit.org/show_bug.cgi?id=173277
        <rdar://problem/32396742>

        Reviewed by Dan Bernstein.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * Tests/WebKit2Cocoa/WKContentViewEditingActions.mm:
        Add a test ensuring that -copy on WKContentView will cause text to be copied.

2017-06-12  Jiewen Tan  <jiewen_tan@apple.com>

        [WebCrypto] Remove experimental feature flag of SubtleCrypto
        https://bugs.webkit.org/show_bug.cgi?id=173197
        <rdar://problem/32688148>

        Reviewed by Brent Fulgham.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (enableExperimentalFeatures):
        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::beginTesting):
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        (WTR::TestRunner::setSubtleCryptoEnabled): Deleted.
        * WebKitTestRunner/InjectedBundle/TestRunner.h:

2017-06-12  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS DnD] Allow the injected bundle to add client data when writing an image to the pasteboard
        https://bugs.webkit.org/show_bug.cgi?id=173238
        <rdar://problem/31943370>

        Reviewed by Ryosuke Niwa and Tim Horton.

        Add a new unit test to verify that data inserted by the injected bundle when beginning a drag on an image
        element is plumbed across to the UI delegate. Also refactors injected bundle unit tests to use the new version
        of adjustedDataInteractionItemProvidersForItemProvider: that takes representing objects and additional data.
