@@ -1,3 +1,14 @@
+2017-06-12  Daniel Bates  <dabates@apple.com>
+
+        Add unit tests for SecurityOrigin::IsPotentiallyTrustworthy()
+        https://bugs.webkit.org/show_bug.cgi?id=173286
+        <rdar://problem/32726102>
+
+        Reviewed by Brent Fulgham.
+
+        * TestWebKitAPI/Tests/WebCore/SecurityOrigin.cpp:
+        (TestWebKitAPI::TEST_F):
+
 2017-06-12  Lucas Forschler  <lforschler@apple.com>
 
         <rdar://problem/32683422>
